style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: Arial, sans-serif;
    background: #0d0d0d;
    color: white;
    overflow-x: hidden;
}

/* NAVBAR */
.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px 40px;
    background: black;
    position: fixed;
    width: 100%;
}

.navbar ul {
    display: flex;
    list-style: none;
    gap: 30px;
}

.navbar a {
    color: white;
    text-decoration: none;
}

.navbar a:hover {
    color: #00ff99;
}

/* HERO */
.hero {
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(to right, #000, #1a1a1a);
    text-align: center;
}

.hero-content {
    max-width: 600px;
}

.btn {
    margin-top: 20px;
    padding: 12px 25px;
    border: none;
    background: #00ff99;
    cursor: pointer;
    transition: 0.3s;
}

button:hover {
    background: white;
    color: black;
}

/* FEATURES */
.features {
    display: grid;
    grid-template-columns: repeat(3, 400px);
    justify-content: center;
    gap: 30px;
    padding: 100px 20px;
}

.card {
    background: #1a1a1a;
    padding: 30px;
    border-radius: 10px;
    transition: 0.3s;
}

.card:hover {
    transform: translateY(-10px);
}

.highlight {
    background: #00ff99;
    color: black;
}

.card h3 {
    margin-bottom: 10px;
}

/* CONTACT */
.contact-section {
    padding: 60px;
    text-align: center;
}

form {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

input {
    width: 300px;
    padding: 10px;
    margin: 10px;
    border: none;
    outline: none;
}

form button {
    padding: 10px 20px;
    border: none;
    background: #00ff99;
    cursor: pointer;
}

/* FOOTER */
footer {
    padding: 20px;
    text-align: center;
    background: black;
}

